--- a/TFG (beta).ipynb
+++ b/TFG (beta).ipynb
@@ -59,6 +59,20 @@
     "    except Exception as e:\n",
     "          # Imprimir un mensaje de error si hay un problema\n",
     "          print(\"Error al cargar el mapa OSM en BaseX:\", e)\n",
+    "\n",
+    "def cargaDB2(session):\n",
+    "    \n",
+    "    session.execute(\"create db osm\")\n",
+    "    \n",
+    "    try:\n",
+    "        with open('MT-OSM-master\\TAGS\\datasets\\Madrid\\map.osm', 'rb') as f:\n",
+    "            contenido = f.read()\n",
+    "            session.add(\"map.osm\", contenido.decode())\n",
+    "        # Imprimir un mensaje de confirmación\n",
+    "        print(\"Mapa OSM cargado en BaseX\")\n",
+    "    except Exception as e:\n",
+    "          # Imprimir un mensaje de error si hay un problema\n",
+    "          print(\"Error al cargar el mapa OSM en BaseX:\", e)\n",
     "        \n",
     "def meterMapa(session):\n",
     "    # Seleccionar archivo\n",
@@ -83,19 +97,36 @@
     "\n",
     "# Busca los errores en el mapa\n",
     "def MtGeometry(session, func):\n",
+    "    r = []\n",
     "    module_namespace = 'mt'\n",
     "    module_path = 'MT-OSM-master\\GEOMETRY\\src\\mt-osm-geometry.xqm'\n",
     "    inp = f\"import module namespace mt = '{module_namespace}' at '{module_path}';\"\n",
     "    \n",
-    "    inp += 'mt:' + func + '(.,\"\",())'\n",
-    "    result = session.query(inp)\n",
-    "    r = result.execute()\n",
+    "    for f in func:\n",
+    "        inp += 'mt:' + f + '(.,\"\",())'\n",
+    "        result = session.query(inp)\n",
+    "        r += result.execute()\n",
+    "        inp = f\"import module namespace mt = '{module_namespace}' at '{module_path}';\"\n",
     "    return r\n",
+    "\n",
+    "#Función dado un id de NODO, calcula su latitud y longitud\n",
+    "def latandlon(id):\n",
+    "  url = f\"https://api.openstreetmap.org/api/0.6/node/{id}\"\n",
+    "  response = requests.get(url)\n",
+    "  root = ET.fromstring(response.content)\n",
+    "  node = root.find(\"node\")\n",
+    "  lat = node.attrib[\"lat\"]\n",
+    "  lon = node.attrib[\"lon\"]\n",
+    "\n",
+    "  return lat, lon\n",
     "\n",
     "# Marca los puntos del resultado de la consulta\n",
     "def marcaPuntos(result, mapa):\n",
     "    #Compacta el string en un xml\n",
-    "    xml_string = '<errores>' + result + '</errores>'\n",
+    "    xml_string = '<errores>'\n",
+    "    for r in result:\n",
+    "        xml_string += r\n",
+    "    xml_string += '</errores>'\n",
     "    \n",
     "    root = ET.fromstring(xml_string)\n",
     "    \n",
@@ -145,13 +176,17 @@
     "    mapa = folium.Map(location=[40.4168, -3.7038], zoom_start=13)\n",
     "    mapa.save('mapa.html')  \n",
     "\n",
-    "def filtros_seleccionados(checkboxes):\n",
+    "def filtros_seleccionados(checkboxes, mapa):\n",
+    "    session = BaseXClient.Session('localhost', 1984, 'admin', 'admin')\n",
+    "    cargaDB2(session)\n",
     "    filtros_seleccionados = []\n",
     "    for checkbox in checkboxes:\n",
     "        if checkbox.isChecked():\n",
     "            filtros_seleccionados.append(checkbox.text())\n",
     "    print(filtros_seleccionados)\n",
     "    r = MtGeometry(session,filtros_seleccionados)\n",
+    "    marcaPuntos(r, mapa)\n",
+    "    session.close()\n",
     "    "
    ]
   },
@@ -221,7 +256,7 @@
     "        \n",
     "        b1.clicked.connect(self.mapa_def)\n",
     "        b2.clicked.connect(self.pedir_posi)\n",
-    "        b3.clicked.connect(self.cerrar_ventana)\n",
+    "        b3.clicked.connect(self.cargar_mapa)\n",
     "        \n",
     "        layout.addWidget(b1)\n",
     "        layout.addWidget(b2)\n",
@@ -264,7 +299,7 @@
     "        self.close()\n",
     "        \n",
     "            \n",
-    "    def cerrar_ventana(self):\n",
+    "    def cargar_mapa(self):\n",
     "        self.close()\n",
     "    \n",
     "    \n",
@@ -330,7 +365,7 @@
     "        botonL = QHBoxLayout()\n",
     "        b1 = QPushButton('Ejecutar')\n",
     "        b2 = QPushButton('Selecionar Zona')\n",
-    "        b1.clicked.connect(lambda:filtros_seleccionados(checkboxes))\n",
+    "        b1.clicked.connect(lambda:filtros_seleccionados(checkboxes, mapa))\n",
     "        botonL.addStretch()\n",
     "        botonL.addWidget(b1)\n",
     "        botonL.addWidget(b2)\n",
@@ -394,7 +429,7 @@
     "    ventanaP.setGeometry(anchoV,alturaV,anchoP,alturaP)\n",
     "    ventanaP.setWindowIcon(QIcon('img/logo.ico'))\n",
     "    ventanaP.show()\n",
-    "\n",
+    "    \n",
     "    sys.exit(app.exec_())"
    ]
   },
@@ -402,6 +437,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "125d0d4b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d78edeb",
    "metadata": {},
    "outputs": [],
    "source": []
