--- a/TFG (beta).ipynb
+++ b/TFG (beta).ipynb
@@ -15,6 +15,8 @@
     "import tkinter as tk\n",
     "import webbrowser\n",
     "from folium.plugins import Fullscreen\n",
+    "from folium import plugins\n",
+    "from folium.plugins import MarkerCluster\n",
     "import os\n",
     "import webview\n",
     "from tkhtmlview import HTMLLabel\n",
@@ -121,7 +123,9 @@
     "  return lat, lon\n",
     "\n",
     "# Marca los puntos del resultado de la consulta\n",
-    "def marcaPuntos(result, mapa):\n",
+    "def marcaPuntos(result):\n",
+    "    mapa = folium.Map(location=[40.4168, -3.7038], zoom_start=15)\n",
+    "    \n",
     "    #Compacta el string en un xml\n",
     "    xml_string = '<errores>'\n",
     "    for r in result:\n",
@@ -140,7 +144,10 @@
     "        \n",
     "        #Marca un punto en el mapa dado una [latitud, longitud]\n",
     "        folium.Marker(location=[lat, lon], popup=\"NoDeadlockTest\").add_to(mapa)\n",
-    "        \n",
+    "    \n",
+    "    mapa.fit_bounds(mapa.get_bounds())\n",
+    "    mapa.save('mapa.html')\n",
+    "    \n",
     "    return xml_string\n",
     "\n",
     "\n",
@@ -173,8 +180,12 @@
     "    return anchoP, alturaP, anchoV, alturaV\n",
     "    \n",
     "def generar_mapa():\n",
-    "    mapa = folium.Map(location=[40.4168, -3.7038], zoom_start=13)\n",
-    "    mapa.save('mapa.html')  \n",
+    "    mapa = folium.Map(location=[40.4168, -3.7038], zoom_start=15)\n",
+    "    folium.Marker([40.4168, -3.7038], popup='Madrid').add_to(mapa)\n",
+    "    draw_options = {'polygon': True, 'polyline': False, 'rectangle': True, 'circle': True, 'marker': False, 'circlemarker': False}\n",
+    "    draw_button = plugins.Draw(export=True, draw_options=draw_options)\n",
+    "    draw_button.add_to(mapa)\n",
+    "    mapa.save('mapa.html')\n",
     "\n",
     "def filtros_seleccionados(checkboxes, mapa):\n",
     "    session = BaseXClient.Session('localhost', 1984, 'admin', 'admin')\n",
@@ -185,7 +196,7 @@
     "            filtros_seleccionados.append(checkbox.text())\n",
     "    print(filtros_seleccionados)\n",
     "    r = MtGeometry(session,filtros_seleccionados)\n",
-    "    marcaPuntos(r, mapa)\n",
+    "    marcaPuntos(r)\n",
     "    session.close()\n",
     "    "
    ]
@@ -300,6 +311,11 @@
     "        \n",
     "            \n",
     "    def cargar_mapa(self):\n",
+    "        session = BaseXClient.Session('localhost', 1984, 'admin', 'admin')\n",
+    "        meterMapa(session)\n",
+    "        mapaD = MapaD(posicionarMapaConCalle(\"Calle Alcala, Madrid\"))\n",
+    "        self.parent().setCentralWidget(mapaD)\n",
+    "        session.close()\n",
     "        self.close()\n",
     "    \n",
     "    \n",
@@ -366,6 +382,7 @@
     "        b1 = QPushButton('Ejecutar')\n",
     "        b2 = QPushButton('Selecionar Zona')\n",
     "        b1.clicked.connect(lambda:filtros_seleccionados(checkboxes, mapa))\n",
+    "        b1.clicked.connect(self.refresh_map)\n",
     "        botonL.addStretch()\n",
     "        botonL.addWidget(b1)\n",
     "        botonL.addWidget(b2)\n",
@@ -387,30 +404,34 @@
     "        main.addWidget(mapaW,4)\n",
     "        main.addWidget(filtroW,1)\n",
     "\n",
-    "        self.setLayout(main)"
+    "        self.setLayout(main)\n",
+    "        \n",
+    "    def refresh_map(self):\n",
+    "        self.mapa.reload()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9eda4740",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SystemExit",
-     "evalue": "0",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 0\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mapa OSM cargado en BaseX\n",
+      "['NoDeadlockTest']\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Tyson\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3386: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     "ename": "TypeError",
+     "evalue": "MapaD.refresh_map() takes 0 positional arguments but 2 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;31mTypeError\u001b[0m: MapaD.refresh_map() takes 0 positional arguments but 2 were given"
      ]
     }
    ],
