--- a/TFG (beta).ipynb
+++ b/TFG (beta).ipynb
@@ -20,6 +20,7 @@
     "\n",
     "import webbrowser\n",
     "\n",
+    "from tkinter import Tk\n",
     "from tkhtmlview import HTMLLabel\n",
     "from tkinter.filedialog import askopenfilename\n",
     "from PIL import ImageTk, Image\n",
@@ -35,7 +36,8 @@
     "import threading\n",
     "\n",
     "import sys\n",
-    "import os"
+    "import os\n",
+    "import re"
    ]
   },
   {
@@ -60,7 +62,7 @@
     "def cargaDB2(session):\n",
     "    session.execute(\"create db osm\")\n",
     "    try:\n",
-    "        with open('MT-OSM-master\\TAGS\\datasets\\Madrid\\map.osm', 'rb') as f:\n",
+    "        with open('MT-OSM-master\\TAGS\\datasets\\SaoPaolo\\map.osm', 'rb') as f:\n",
     "            contenido = f.read()\n",
     "            session.add(\"map.osm\", contenido.decode())\n",
     "        # Imprimir un mensaje de confirmación\n",
@@ -204,7 +206,14 @@
     "        cargaDB2(session)\n",
     "        r = MtGeometry(session, filtros_seleccionados)\n",
     "        marcaPuntos(r)\n",
-    "        session.close()\n"
+    "        session.close()\n",
+    "\n",
+    "def zona_busqueda(lista2):\n",
+    "        botones_seleccionados = lista2.checkedButton()\n",
+    "        if botones_seleccionados:\n",
+    "            print(\"Botón seleccionado:\", botones_seleccionados.text())\n",
+    "        else:\n",
+    "            print(\"Ningún botón seleccionado\")"
    ]
   },
   {
@@ -283,7 +292,10 @@
     "            \"border-radius: 20px;\" +\n",
     "            \"border: none;}\" +\n",
     "            \"*:pressed {background-color: #C5DFF1;}\" +\n",
-    "            \"*:hover {background-color: #C5DFF1;}\"\n",
+    "            \"*:hover {background-color: #C5DFF1;}\"+ \n",
+    "            \"*:disabled {background-color: #CACCD3;\" +\n",
+    "            \"border: 2px grey;\" +\n",
+    "            \"border-style: inset;}\"\n",
     "        )\n",
     "        \n",
     "        # Creamos un nuevo Layout para poder ajustar el texto\n",
@@ -439,20 +451,6 @@
     "        session.close()\n",
     "        self.close()\n",
     "        \n",
-    "    # Sobrescribimos la función para que se redimensione la imagen de fondo\n",
-    "    #def resizeEvent(self, evt):\n",
-    "        # pixmap = QPixmap('img/fondo.png')\n",
-    "        # pixmap.scaled(evt.size(),Qt.IgnoreAspectRatio)\n",
-    "        # palette = self.centralwidget.palette()\n",
-    "        # brush = QBrush(image)\n",
-    "        # palette.setBrush(QPalette.Background, brush)\n",
-    "        # self.centralwidget.setPalette(palette)\n",
-    "        # self.repaint()\n",
-    "        # pixmap = pixmap.scaled(evt.size(), Qt.IgnoreAspectRatio);\n",
-    "        # p = self.palette();\n",
-    "        # p.setBrush(QPalette.Background, QBrush.setTexture(self,  pixmap));\n",
-    "        # setPalette(p);\n",
-    "        \n",
     "class PedirPos(QDialog):\n",
     "    def __init__(self, ventanaP):\n",
     "        super().__init__()\n",
@@ -559,7 +557,7 @@
     "        # Creamos el mapa\n",
     "        mapa = QWebEngineView()\n",
     "        mapa.load(QUrl.fromLocalFile(os.path.realpath(\"mapa.html\")))\n",
-    "        #mapa.setFixedSize(int(anchoP*3/5), alturaP)\n",
+    "        mapa.setFixedSize(int(anchoP*3/5), alturaP)\n",
     "        mapaL = QVBoxLayout()\n",
     "        mapaL.addWidget(mapa)\n",
     "         \n",
@@ -584,7 +582,7 @@
     "                  'Al seleccionar este filtro, buscaremos\\naquellas áreas que estén intersectadas',\n",
     "                  'Al seleccioanr este filtro, buscaremos\\naquellas carreteras y edificios que tengan segmentos en común']\n",
     "        \n",
-    "        checkboxes = []\n",
+    "        self.checkboxes = []\n",
     "        for i, nom in enumerate(nombresF):\n",
     "            checkbox = QCheckBox(nom)\n",
     "            info = infosF[i] if i < len(infosF) else ''\n",
@@ -597,8 +595,39 @@
     "            )\n",
     "            checkbox.setCursor(Qt.PointingHandCursor)\n",
     "            lista.addWidget(checkbox, i, 0)\n",
-    "            checkboxes.append(checkbox)\n",
+    "            self.checkboxes.append(checkbox)\n",
     "            \n",
+    "        for checkbox in self.checkboxes:\n",
+    "            checkbox.stateChanged.connect(self.activar_boton)\n",
+    "        \n",
+    "        #Colocamos opciones\n",
+    "        lista2 = QButtonGroup()\n",
+    "        rb1 = QRadioButton(\"Centrar búsqueda en posición original\")\n",
+    "        rb1.setChecked(True)\n",
+    "        rb1.setStyleSheet(\n",
+    "                \"*{color: black;\" +\n",
+    "                \"font: Gilroy;\" +\n",
+    "                \"font-size: 20px;}\" +\n",
+    "                \"QToolTip {font-size: 18px;}\"\n",
+    "            )\n",
+    "        rb2 = QRadioButton(\"Buscar sobre posición original\")\n",
+    "        rb2.setStyleSheet(\n",
+    "                \"*{color: black;\" +\n",
+    "                \"font: Gilroy;\" +\n",
+    "                \"font-size: 20px;}\" +\n",
+    "                \"QToolTip {font-size: 18px;}\"\n",
+    "            )\n",
+    "        rb3 = QRadioButton(\"Buscar en un radio de 10KM sobre posicion original\")\n",
+    "        rb3.setStyleSheet(\n",
+    "                \"*{color: black;\" +\n",
+    "                \"font: Gilroy;\" +\n",
+    "                \"font-size: 20px;}\" +\n",
+    "                \"QToolTip {font-size: 18px;}\"\n",
+    "            )\n",
+    "        lista2.addButton(rb1, 0)\n",
+    "        lista2.addButton(rb2, 1)\n",
+    "        lista2.addButton(rb3, 2)\n",
+    "        \n",
     "        # Contenedor Filtros\n",
     "        texto = QLabel(\"Seleccione los errores que desea buscar:\")\n",
     "        texto.setWordWrap(True)\n",
@@ -609,20 +638,37 @@
     "            \"font-weight: bold;}\"\n",
     "        )\n",
     "        \n",
+    "        #Contenedor Opciones\n",
+    "        texto2 = QLabel(\"Selecione la opción de búsqueda:\")\n",
+    "        texto2.setWordWrap(True)\n",
+    "        texto2.setStyleSheet(\n",
+    "            \"*{color: white;\" +\n",
+    "            \"font: Gilroy;\" +\n",
+    "            \"font-size: 23px;\" +\n",
+    "            \"font-weight: bold;}\"\n",
+    "        )\n",
+    "        \n",
     "        # Botones\n",
     "        botonL = QHBoxLayout()\n",
-    "        b1 = BotonRedondeadoMini('EJECUTAR', 150, 70)\n",
-    "        b2 = BotonRedondeadoMini('VOLVER A MENÚ', 150, 70)\n",
-    "        b1.clicked.connect(lambda:filtros_seleccionados(checkboxes))\n",
-    "        b1.clicked.connect(self.ver_mapaR)\n",
-    "        b2.clicked.connect(self.ver_menu)\n",
+    "        self.b1 = BotonRedondeadoMini('EJECUTAR', 150, 70)\n",
+    "        self.b2 = BotonRedondeadoMini('VOLVER A MENÚ', 150, 70)\n",
+    "        self.b1.clicked.connect(lambda:filtros_seleccionados(self.checkboxes))\n",
+    "        self.b1.clicked.connect(lambda: zona_busqueda(lista2))\n",
+    "        self.b1.clicked.connect(self.ver_mapaR)\n",
+    "        self.b2.clicked.connect(self.ver_menu)\n",
+    "        self.b1.setEnabled(False)\n",
     "        botonL.addStretch(0)\n",
-    "        botonL.addWidget(b1)\n",
-    "        botonL.addWidget(b2)\n",
+    "        botonL.addWidget(self.b1)\n",
+    "        botonL.addWidget(self.b2)\n",
     "\n",
     "        filtroL = QVBoxLayout()\n",
     "        filtroL.addWidget(texto)\n",
     "        filtroL.addLayout(lista)\n",
+    "        filtroL.addSpacerItem(QSpacerItem(0, 35, QSizePolicy.Minimum, QSizePolicy.Expanding))\n",
+    "        filtroL.addWidget(texto2)\n",
+    "        filtroL.addWidget(rb1)\n",
+    "        filtroL.addWidget(rb2)\n",
+    "        filtroL.addWidget(rb3)\n",
     "        filtroL.addSpacerItem(QSpacerItem(0, 35, QSizePolicy.Minimum, QSizePolicy.Expanding))\n",
     "        filtroL.addLayout(botonL)\n",
     "\n",
@@ -638,6 +684,10 @@
     "        main.addWidget(filtroW)\n",
     "\n",
     "        self.setLayout(main)\n",
+    "    \n",
+    "    def activar_boton(self):\n",
+    "        activar = any(checkbox.isChecked() for checkbox in self.checkboxes)\n",
+    "        self.b1.setEnabled(activar)\n",
     "        \n",
     "    def ver_mapaR(self):\n",
     "        mapaD = MapaR(generar_mapa(40.4168, -3.7038, 13))\n",
@@ -725,17 +775,6 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'PedirPos' object has no attribute 'direccion'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [4], line 324\u001b[0m, in \u001b[0;36mPedirPos.keyPressEvent\u001b[1;34m(self, evt)\u001b[0m\n\u001b[0;32m    323\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mkeyPressEvent\u001b[39m(\u001b[38;5;28mself\u001b[39m, evt):\n\u001b[1;32m--> 324\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdireccion\u001b[49m\u001b[38;5;241m.\u001b[39msetFocus()\n\u001b[0;32m    325\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdireccion\u001b[38;5;241m.\u001b[39mkeyPressEvent(evt)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'PedirPos' object has no attribute 'direccion'"
-     ]
-    },
-    {
      "ename": "SystemExit",
      "evalue": "0",
      "output_type": "error",
@@ -748,7 +787,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\tyson\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3386: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "C:\\Users\\Tyson\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3386: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
       "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
@@ -776,8 +815,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "568bcab7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'session' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m session\u001b[38;5;241m.\u001b[39mclose()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'session' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "session.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9f0a084",
    "metadata": {},
    "outputs": [],
    "source": []
