--- a/TFG (beta).ipynb
+++ b/TFG (beta).ipynb
@@ -34,6 +34,8 @@
     "\n",
     "import time\n",
     "import threading\n",
+    "import datetime\n",
+    "from reportlab.pdfgen import canvas\n",
     "\n",
     "import sys\n",
     "import os\n",
@@ -62,7 +64,7 @@
     "def cargaDB2(session):\n",
     "    session.execute(\"create db osm\")\n",
     "    try:\n",
-    "        with open('MT-OSM-master\\TAGS\\datasets\\SaoPaolo\\map.osm', 'rb') as f:\n",
+    "        with open('MT-OSM-master/TAGS/datasets/Madrid/map.osm', 'rb') as f:\n",
     "            contenido = f.read()\n",
     "            session.add(\"map.osm\", contenido.decode())\n",
     "        # Imprimir un mensaje de confirmación\n",
@@ -70,6 +72,51 @@
     "    except Exception as e:\n",
     "          # Imprimir un mensaje de error si hay un problema\n",
     "          print(\"Error al cargar el mapa OSM en BaseX:\", e)\n",
+    "        \n",
+    "def cargaDBradio(lat, lon, radio, session):\n",
+    "    consulta = f\"\"\"\n",
+    "    [out:xml];\n",
+    "    (\n",
+    "        node(around:{radio},{lat},{lon});\n",
+    "        way(around:{radio},{lat},{lon});\n",
+    "        relation(around:{radio},{lat},{lon});\n",
+    "    );\n",
+    "    out meta;\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # URL de la API de Overpass\n",
+    "    url = \"https://overpass-api.de/api/interpreter\"\n",
+    "\n",
+    "    # Parámetros de la solicitud POST\n",
+    "    parametros = {\n",
+    "        \"data\": consulta\n",
+    "    }\n",
+    "\n",
+    "    # Realizar la solicitud POST a Overpass API\n",
+    "    response = requests.post(url, data=parametros)\n",
+    "\n",
+    "    # Verificar el código de estado de la respuesta\n",
+    "    if response.status_code == 200:\n",
+    "        # Decodificar la respuesta en formato XML\n",
+    "        osm_data = ET.fromstring(response.content)\n",
+    "\n",
+    "        try:\n",
+    "            # Crear una base de datos en BaseX\n",
+    "            session.execute(\"create db osm\")\n",
+    "\n",
+    "            # Convertir el objeto Element a una cadena\n",
+    "            osm_data_str = ET.tostring(osm_data, encoding=\"unicode\", method=\"xml\")\n",
+    "\n",
+    "            # Añadir el contenido XML a la base de datos\n",
+    "            session.add(\"map.osm\", osm_data_str)\n",
+    "\n",
+    "            # Imprimir un mensaje de confirmación\n",
+    "            print(\"Mapa OSM cargado en BaseX\")\n",
+    "        except Exception as e:\n",
+    "            # Imprimir un mensaje de error si hay un problema\n",
+    "            print(\"Error al cargar los datos OSM en BaseX:\", e)\n",
+    "    else:\n",
+    "        print(\"Error al descargar los datos OSM desde Overpass API\")\n",
     "\n",
     "def meterMapa(session):\n",
     "    # Seleccionamos el archivo\n",
@@ -79,6 +126,14 @@
     "    \n",
     "    # Cargamos el mapa dado el mapa seleccionado\n",
     "    cargaDBdadoUnMapa(session, mapGiven)\n",
+    "    # Ejecutar la consulta XQuery para obtener el valor del atributo \"ref\" del primer \"nd\"\n",
+    "    query = session.query(\"let $doc := doc('osm') return string(($doc//way)[1]/tag[@k='name']/@v)\")\n",
+    "    result = query.execute()\n",
+    "\n",
+    "    # Obtener el resultado como una cadena de texto\n",
+    "    nombreCalle = result.strip()\n",
+    "    \n",
+    "    return nombreCalle\n",
     "\n",
     "# Coloca el mapa según la dirección dada\n",
     "def posicionarMapaConCalle(direccion):\n",
@@ -117,33 +172,43 @@
     "    return lat, lon\n",
     "\n",
     "# Marca los puntos del resultado de la consulta\n",
-    "def marcaPuntos(result):\n",
+    "def marcaPuntos(result, tipo):\n",
     "    # Generamos un nuevo mapa ya que no tenemos acceso al que se muestra\n",
     "    mapa = folium.Map(location=[40.4168, -3.7038], zoom_start=13)\n",
     "    \n",
-    "    # Compactamos el string en un xml\n",
+    "    errores = \"- \" + tipo + \"\\n\"\n",
+    "    nombre_calle = \"\"\n",
+    "    #Compacta el string en un xml\n",
     "    xml_string = '<errores>'\n",
     "    for r in result:\n",
     "        xml_string += r\n",
-    "    xml_string += '</errores>'\n",
+    "    xml_string+= '</errores>'\n",
+    "    \n",
     "    \n",
     "    root = ET.fromstring(xml_string)\n",
-    "    # Busca todas las ways\n",
+    "    \n",
+    "    #Busca todas las ways\n",
     "    ways = root.findall('.//way')\n",
     "    \n",
-    "    # Por cada way, encuentra el primer nodo y lo marca en el mapa\n",
+    "    #Por cada way, encuentra el primer nodo y lo marca en el mapa\n",
     "    for w in ways:\n",
     "        nd_element = w.find('./nd').get('ref')\n",
     "        lat, lon= latandlon(nd_element)\n",
+    "        errores += \"Nodo: \" + nd_element \n",
+    "        for etiqueta in w.findall(\".//tag\"):\n",
+    "            if etiqueta.get(\"k\") == \"name\":\n",
+    "                nombre_calle = etiqueta.get(\"v\")\n",
+    "        errores += \" | \" + nombre_calle + \"\\n\"\n",
     "        \n",
-    "        # Marca un punto en el mapa dado una [latitud, longitud]\n",
-    "        folium.Marker(location=[lat, lon], popup=\"NoDeadlockTest\").add_to(mapa)\n",
-    "    \n",
+    "        #Marca un punto en el mapa dado una [latitud, longitud]\n",
+    "        folium.Marker(location=[lat, lon], popup=tipo).add_to(mapa)\n",
+    "        \n",
+    "        \n",
     "    # Guardamos el nuevo mapa marcado para mostrarlo\n",
     "    mapa.fit_bounds(mapa.get_bounds())\n",
-    "    mapa.save('mapaR.html')   \n",
-    "    # Devolvemos el xml para mostrarlo\n",
-    "    return xml_string\n",
+    "    mapa.save('mapaR.html')  \n",
+    "    \n",
+    "    return xml_string, errores\n",
     "\n",
     "# Dibuja en m el área que definen las coordenadas\n",
     "def dibujarArea(coordenadas, m):\n",
@@ -193,21 +258,28 @@
     "    mensaje.setWindowTitle(\"Mensaje\")\n",
     "    mensaje.setText(\"No se ha seleccionado ningún filtro, por favor seleecione alguno antes de continuar\")\n",
     "    mensaje.exec_()\n",
+    "\n",
+    "strErrores = \"\"\n",
+    "strXml = \"\"\n",
     "    \n",
-    "def filtros_seleccionados(checkboxes):\n",
+    "def filtros_seleccionados(checkboxes, nombresT):\n",
     "    filtros_seleccionados = []\n",
-    "    for checkbox in checkboxes:\n",
+    "    for i, checkbox in enumerate(checkboxes):\n",
     "        if checkbox.isChecked():\n",
-    "            filtros_seleccionados.append(checkbox.text())\n",
+    "            filtros_seleccionados.append(nombresT[i])\n",
     "    if len(filtros_seleccionados)==0:\n",
     "        mensaje_Error();\n",
     "    else:\n",
     "        session = BaseXClient.Session('localhost', 1984, 'admin', 'admin')\n",
     "        cargaDB2(session)\n",
     "        r = MtGeometry(session, filtros_seleccionados)\n",
-    "        marcaPuntos(r)\n",
+    "        xml, errores = marcaPuntos(r, filtros_seleccionados[0])\n",
     "        session.close()\n",
-    "\n",
+    "        global strErrores\n",
+    "        strErrores = errores\n",
+    "        global strXml\n",
+    "        strXml = xml\n",
+    "    \n",
     "def zona_busqueda(lista2):\n",
     "        botones_seleccionados = lista2.checkedButton()\n",
     "        if botones_seleccionados:\n",
@@ -445,8 +517,8 @@
     "        \n",
     "    def cargar_mapa(self):\n",
     "        session = BaseXClient.Session('localhost', 1984, 'admin', 'admin')\n",
-    "        meterMapa(session)\n",
-    "        mapaD = MapaD(posicionarMapaConCalle(\"Calle Alcala, Madrid\"))\n",
+    "        nombre = meterMapa(session)\n",
+    "        mapaD = MapaD(posicionarMapaConCalle(nombre))\n",
     "        self.parent().setCentralWidget(mapaD)\n",
     "        session.close()\n",
     "        self.close()\n",
@@ -542,7 +614,8 @@
     "        mapaD = MapaD(posicionarMapaConCalle(direc))\n",
     "        ventanaP.setCentralWidget(mapaD)\n",
     "        self.close()\n",
-    "    \n",
+    "\n",
+    "\n",
     "class MapaD(QWidget):      \n",
     "    def __init__(self, funcionMapa):\n",
     "        super().__init__()\n",
@@ -563,7 +636,16 @@
     "         \n",
     "        # Colocamos los filtros\n",
     "        lista = QGridLayout()\n",
-    "        nombresF = ['NoDeadlockTest',\n",
+    "        nombresF = ['Calles con puntos muertos',\n",
+    "                    'Calles sin entradas ni salidas',\n",
+    "                    'Calles sin ningún tipo de salida',\n",
+    "                    'Calles sin ningún tipo de entrada',\n",
+    "                    'Rotondas sin salidas',\n",
+    "                    'Rotondas sin entradas',\n",
+    "                    'Caminos desconectados',\n",
+    "                    'Áreas cerradas intersecadas por vías',\n",
+    "                    'Superposición de carreteras y edificios']\n",
+    "        nombresT = ['NoDeadlockTest',\n",
     "                     'NoIsolatedWayTest',\n",
     "                     'ExitWayTest',\n",
     "                     'EntranceWayTest',\n",
@@ -652,7 +734,7 @@
     "        botonL = QHBoxLayout()\n",
     "        self.b1 = BotonRedondeadoMini('EJECUTAR', 150, 70)\n",
     "        self.b2 = BotonRedondeadoMini('VOLVER A MENÚ', 150, 70)\n",
-    "        self.b1.clicked.connect(lambda:filtros_seleccionados(self.checkboxes))\n",
+    "        self.b1.clicked.connect(lambda:filtros_seleccionados(self.checkboxes, nombresT))\n",
     "        self.b1.clicked.connect(lambda: zona_busqueda(lista2))\n",
     "        self.b1.clicked.connect(self.ver_mapaR)\n",
     "        self.b2.clicked.connect(self.ver_menu)\n",
@@ -660,7 +742,7 @@
     "        botonL.addStretch(0)\n",
     "        botonL.addWidget(self.b1)\n",
     "        botonL.addWidget(self.b2)\n",
-    "\n",
+    "        \n",
     "        filtroL = QVBoxLayout()\n",
     "        filtroL.addWidget(texto)\n",
     "        filtroL.addLayout(lista)\n",
@@ -727,6 +809,36 @@
     "            \"font-weight: bold;}\"\n",
     "        )\n",
     "        \n",
+    "        texto2 = QLabel(\"Resultados OSM:\")\n",
+    "        texto2.setWordWrap(True)\n",
+    "        texto2.setStyleSheet(\n",
+    "            \"*{color: white;\" +\n",
+    "            \"font: Gilroy;\" +\n",
+    "            \"font-size: 23px;\" +\n",
+    "            \"font-weight: bold;}\"\n",
+    "        )\n",
+    "        \n",
+    "        arriba = QTextBrowser(self)\n",
+    "        arriba.setPlainText(strErrores)\n",
+    "        arriba.setStyleSheet( \"*{color: black;\" +\n",
+    "            \"font: Gilroy;\" +\n",
+    "            \"font-size: 16px;\" +\n",
+    "            \"font-weight: bold;}\")\n",
+    "        arriba.setStyleSheet(\"background-color: lightyellow; color: balck; font-size: 16px;\")\n",
+    "        abajo = QTextBrowser(self)\n",
+    "        abajo.setPlainText(strXml)\n",
+    "        abajo.setStyleSheet( \"*{color: black;\" +\n",
+    "            \"font: Gilroy;\" +\n",
+    "            \"font-size: 16px;\" +\n",
+    "            \"font-weight: bold;}\")\n",
+    "        abajo.setStyleSheet(\"background-color: lightyellow; color: balck; font-size: 16px;\")\n",
+    "        b_export1 = BotonRedondeadoMini(\"Exportar Resultados\", 400, 40)\n",
+    "        b_export2 = BotonRedondeadoMini(\"Exportar Resultados\", 400, 40)\n",
+    "        nombre = \"Datos\"\n",
+    "        nombre2 = \"DatosOSM\"\n",
+    "        b_export1.clicked.connect(lambda:self.exportar(strErrores, f\"{nombre}{datetime.datetime.now().strftime('%Y-%m-%d%H-%M-%S')}.pdf\"))\n",
+    "        b_export2.clicked.connect(lambda:self.exportar(strXml, f\"{nombre2}{datetime.datetime.now().strftime('%Y-%m-%d%H-%M-%S')}.pdf\"))\n",
+    "        \n",
     "        # Botones\n",
     "        botonL = QHBoxLayout()\n",
     "        b1 = BotonRedondeadoMini('NUEVA BÚSQUEDA', 150, 70)\n",
@@ -739,8 +851,12 @@
     "\n",
     "        filtroL = QVBoxLayout()\n",
     "        filtroL.addWidget(texto)\n",
-    "        #filtroL.addSpacerItem(QSpacerItem(0, 5, QSizePolicy.Minimum, QSizePolicy.Expanding))\n",
-    "        #filtroL.addLayout(lista)\n",
+    "        filtroL.addWidget(arriba)\n",
+    "        filtroL.addWidget(b_export1)\n",
+    "        filtroL.addSpacerItem(QSpacerItem(0, 5, QSizePolicy.Minimum, QSizePolicy.Expanding))\n",
+    "        filtroL.addWidget(texto2)\n",
+    "        filtroL.addWidget(abajo)\n",
+    "        filtroL.addWidget(b_export2)\n",
     "        filtroL.addSpacerItem(QSpacerItem(0, 35, QSizePolicy.Minimum, QSizePolicy.Expanding))\n",
     "        filtroL.addLayout(botonL)\n",
     "\n",
@@ -765,30 +881,35 @@
     "    def ver_menu(self):\n",
     "        menu = Menu()\n",
     "        self.parent().setCentralWidget(menu)\n",
-    "        self.close()"
+    "        self.close()\n",
+    "        \n",
+    "    def exportar(self, datos, nombre):\n",
+    "        if not nombre.endswith('.pdf'):\n",
+    "            nombre += '.pdf'\n",
+    "\n",
+    "        #Estilo PDF\n",
+    "        c = canvas.Canvas(nombre)\n",
+    "        c.setPageSize((400, 400))\n",
+    "        c.setFont(\"Helvetica\", 12)\n",
+    "        c.drawString(50, 280, datos)\n",
+    "        c.save()\n",
+    "        popup = QMessageBox()\n",
+    "        popup.setWindowTitle(\"Exportación completa\")\n",
+    "        popup.setText(\"Se ha realizado el export correctamente\")\n",
+    "        popup.exec_()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9eda4740",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SystemExit",
-     "evalue": "0",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Tyson\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3386: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+      "Mapa OSM cargado en BaseX\n"
      ]
     }
    ],
